# ai-cockpit

./: .gitignore  README.md  openai.js  package-lock.json  package.json  run.js
.github/workflows/: release.yml
app/accounts/: account-manager.js  openai-token-refresh.js  sub2api-agent-identity.js
app/admin/: admin-api.js
app/config/: config-editor.js  openai-config.js  runtime-config-reconciler.js
app/http/: proxy-header-overrides.js  upstream-request.js
app/protocols/: claude-messages-handler.js  claude-responses-compat.js
app/security/: request-auth.js
desktop/: README.md  index.html  package.json
desktop/scripts/: prepare-resources.mjs
desktop/src/: account-export.js  account-import.js  account-model.js  actions.js  app.js  batch-export.js  batch-import.js  render.js  reorder.js  state.js  styles.css  tauri-api.js  theme.js  update.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: account_export.rs  commands.rs  desktop_data.rs  main.rs  runtime.rs  service.rs  shell.rs
docs/: 客户端接入指南.md  网络与代理配置.md  账号导入导出与迁移.md  账号导出与跨设备导入设计.md  账号额度与自动切换.md  配置字段参考.md
test/accounts/: account-manager.test.js  openai-token-refresh.test.js  sub2api-agent-identity.test.js
test/architecture/: release-workflow.test.js  repository-boundary.test.js
test/config/: config-editor.test.js  runtime-config-reconciler.test.js
test/desktop/: desktop-boot.test.js
test/http/: upstream-request.test.js
test/integration/: openai-admin-refresh.test.js  proxy-boundary.test.js  run.test.js
(+15 files in other folders)
