[package]
name = "ai-cockpit-desktop"
version = "0.1.0"
description = "AI Cockpit Desktop"
authors = ["AI Cockpit"]
edition = "2024"

[[bin]]
name = "ai-cockpit-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
